# circup

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGES.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Makefile  README.rst  _setup.py  bundle_config.json.license  circup.py  make.cmd  make.py  optional_requirements.txt  optional_requirements.txt.license  pyproject.toml  readthedocs.yml  requirements.txt  requirements.txt.license  rtd_requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.license  prepare_host.sh  requirements.txt  requirements.txt.license
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  release.yml
circup/: __init__.py  backends.py  bundle.py  class_definitions.py  command_utils.py  commands.py  lazy_metadata.py  logging.py  module.py  shared.py  util_functions.py
circup/config/: bundle_config.json
circup/wwshell/: README.rst  README.rst.license  __init__.py  commands.py
docs/: Makefile  conf.py  index.rst  index.rst.license
make/: make.py
tests/: bad_python.py  bundle.json  device.json  import_styles.py  local_module.py  local_module_cp7.mpy  remote_module.py  test_bundle_config.json  test_bundle_config_local.json  test_bundle_config_local.json.license  test_circup.py
tests/bad_module/: my_module.py
tests/dir_module/: my_module.py
tests/mock_device/: boot_out.txt
tests/mock_device/apps/test_app/: import_styles_sub.py
tests/mock_device_2/: .gitignore  boot_out.txt.license  code.py
tests/mock_device_2/package/: __init__.py  other.py
